@@ -1,3 +1,9 @@
+master
+------
+
+* Fix multiple jenkins configs not working properly
+  - Due to caching on the client, the first config to be checked would always be used
+
 Version 0.11.4
 --------------
 
